# rust-soundmeter

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yml
src/: main.rs
