[package]
name = "ssh-soundmeter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
futures = "0.3"
hidapi = "2.6"
mdns-sd = "0.18"
ratatui = "0.29"
russh = "0.45"
russh-keys = "0.45"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "sync", "time"] }
